--- a/src/Apps/Makefile
+++ b/src/Apps/Makefile
@@ -8,8 +8,7 @@ include $(NUPROPEARTH)/src/make/Make.include
 
 BIN_PATH = $(NUPROPEARTH)/bin
 
-TGT = ComputeAttenuation VertexGenerator LeptonPropagator
-#TGT = LeptonPropagator
+TGT = ComputeAttenuation VertexGenerator LeptonShowers
 
 all: $(TGT)
 
@@ -25,6 +24,10 @@ LeptonPropagator: FORCE
 	$(CXX) $(CXXFLAGS) -c LeptonPropagator.cxx $(CPP_INCLUDES)
 	$(LD) $(LDFLAGS) LeptonPropagator.o $(LIBRARIES) -o $(BIN_PATH)/LeptonPropagator
 
+LeptonShowers: FORCE 
+	$(CXX) $(CXXFLAGS) -c LeptonShowers.cxx $(CPP_INCLUDES)
+	$(LD) $(LDFLAGS) LeptonShowers.o $(LIBRARIES) -o $(BIN_PATH)/LeptonShowers
+
 purge:
 	$(RM) *.o *~ core
 
@@ -34,5 +37,6 @@ clean:
 	$(RM) *.o *~ core $(BIN_PATH)/ComputeAttenuation
 	$(RM) *.o *~ core $(BIN_PATH)/VertexGenerator
 	$(RM) *.o *~ core $(BIN_PATH)/LeptonPropagator
+	$(RM) *.o *~ core $(BIN_PATH)/LeptonShowers
 
 FORCE:
