--- a/src/Apps/Makefile
+++ b/src/Apps/Makefile
@@ -8,7 +8,7 @@ include $(NUPROPEARTH)/src/make/Make.include
 
 BIN_PATH = $(NUPROPEARTH)/bin
 
-TGT = ComputeAttenuation VertexGenerator LeptonShowers
+TGT = ComputeAttenuation VertexGenerator LeptonPropagator
 
 all: $(TGT)
 
@@ -24,10 +24,6 @@ LeptonPropagator: FORCE
 	$(CXX) $(CXXFLAGS) -c LeptonPropagator.cxx $(CPP_INCLUDES)
 	$(LD) $(LDFLAGS) LeptonPropagator.o $(LIBRARIES) -o $(BIN_PATH)/LeptonPropagator
 
-LeptonShowers: FORCE 
-	$(CXX) $(CXXFLAGS) -c LeptonShowers.cxx $(CPP_INCLUDES)
-	$(LD) $(LDFLAGS) LeptonShowers.o $(LIBRARIES) -o $(BIN_PATH)/LeptonShowers
-
 purge:
 	$(RM) *.o *~ core
 
@@ -37,6 +33,5 @@ clean:
 	$(RM) *.o *~ core $(BIN_PATH)/ComputeAttenuation
 	$(RM) *.o *~ core $(BIN_PATH)/VertexGenerator
 	$(RM) *.o *~ core $(BIN_PATH)/LeptonPropagator
-	$(RM) *.o *~ core $(BIN_PATH)/LeptonShowers
 
 FORCE:
